2008-05-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie.c (soup_cookie_applies_to_uri): fix the path
	checking

2008-04-29  Tor Lillqvist  <tml@novell.com>

	* libsoup/soup-dns.c (soup_dns_is_ip_address): Fix compilation
	error in the !HAVE_IPV6 && !HAVE_INET_PTON && !HAVE_INET_ATON
	case.

2008-04-21  Dan Winship  <danw@gnome.org>

	* configure.in: 2.23.1, bump AGE and CURRENT

	* NEWS: update

2008-04-20  Dan Winship  <danw@gnome.org>

	Fixes for GnuTLS support on Win32. #528752, patch from Marc Maurer

	* libsoup/soup-gnutls.c (soup_ssl_wrap_iochannel): add an argument
	saying whether or not the socket is non-blocking, since there's no
	way to determine this from the fd in WinSock.
	(do_handshake, soup_gnutls_read, soup_gnutls_write): Update for
	that.

	* libsoup/soup-socket.c (soup_socket_start_proxy_ssl): Update for
	that

	* libsoup/soup-nossl.c (soup_ssl_wrap_iochannel): update the
	declaration here too

	* tests/ssl-test.c: Some updates to get this closer to working on
	Windows...

2008-04-14  Chris Lord  <chrislord.net@gmail.com>

	reviewed by: Dan Winship <danw@gnome.org>

	* libsoup/soup-cookie-jar.c (soup_cookie_jar_set_cookie):
	Check that the cookie was parsed successfully before setting it

2008-04-08  Dan Winship  <danw@gnome.org>

	Initial HTTP cookie support imported from development git repo,
	including patches from Xan Lopez.

	TODO: make sure the logic in soup_cookie_jar_get_cookies() is
	right. Add a test program to tests/.

	* libsoup/soup-cookie.c: Code for parsing and generating HTTP
	cookies.

	* libsoup/soup-cookie-jar.c: Code for managing SoupCookies and
	integrating cookie management with a SoupSession.

	* libsoup/soup-date.c (soup_date_is_past): New, checks if a
	SoupDate refers to a time in the past

	* libsoup/soup-dns.c (soup_dns_is_ip_address): New, checks if a
	string is a valid IP address

	* libsoup/soup-headers.c (soup_header_parse_semi_param_list): New,